合作團隊心得回饋新增外部連結

--- a/Desktop/合作團隊/合作團隊複製用模板.html
+++ b/Desktop/合作團隊/合作團隊複製用模板.html
@@ -105,6 +105,14 @@
                         <img id="stuentAvatar" class="w-100" alt="學生頭像">
                     </div>
                     <p id="studentName" class="mt-3"></p>
+                    <div id="studentLinks" class="d-flex justify-content-start px-3">
+                        <a id="studentYoutube" class="text-decoration-none p-3" target="_blank">
+                            <i class="fab fa-youtube" style="color: #ff0000; font-size: 2.5em;"></i>
+                        </a>
+                        <a id="studentOtherLink" class="text-decoration-none p-3" target="_blank">
+                            <i class="fas fa-external-link-square-alt" style="color: #3b5998; font-size: 2.5em;"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-9 mt-3 mt-lg-0">
