新增 collaborativePartnerFeedbacks 欄位

--- a/DB/合作團隊_VR串聯海上桃花源.html
+++ b/DB/合作團隊_VR串聯海上桃花源.html
@@ -85,11 +85,15 @@
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/10.png',
             'name': '同學 A',
             'content': '心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png',
             'name': '同學 B',
             'content': '心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。',
+            'youtube': '',
+            'otherLink': '',
         },
     ];
 </script>
