--- a/DB/合作團隊_善循環經濟的實踐.html
+++ b/DB/合作團隊_善循環經濟的實踐.html
@@ -91,66 +91,88 @@
             'intro': `以無限循環的意象為基礎融合USR與CSR，代表雙方合作推廣Design for SDGs，共創無限可能。並為核心精神訂下執行標語:「思考全球議題，始於地方實踐」。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/01.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': 'Design for SDG14 (二校三系)海廢燈具設計展',
             'intro': `與光寶科技公司企業社會責任部門，以及北科互動設計系、南台科技大學創意產品設計學系共同專注於SDG14-守護海洋的主題，先後舉辦「Design for SDG14 兩校三系成果發表會」，「Design for SDG14 燈具設計展」，凝聚USR與CSR能量，為將來成果推廣之路打下良好基礎。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/02.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': 'Design for SDG14 海廢創意設計展',
             'intro': `基於Design for SDG14 的核心，團隊將成果推廣至開放的公共場域，與基隆海洋科技博物館合作，透過海廢燈具的形式，令更多不同身分與年齡層的大眾可以瞭解到海洋環境所面臨到的危機，以及金山的在地文化。同時亦展開數位化的平台建置，培養多元化推廣管道的優勢。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/03.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': 'Design for SDGs海洋永續X山林永續',
             'intro': `展覽由台北市柯市長的演說拉開序幕。北科大與南港瓶蓋工廠-台北製造所合作，凝聚學校USR、企業CSR與NGO團體，發揮新創空間優勢，打造專屬SDGs展覽空間。從概念設計(Concept design)、功能原型(Working prototype)，到可實現量產之產品化設計等三層次面向，展現學校、公民團體與企業皆為實現環境永續發展而持續挹注資源與心力的成績。並且展會與南瓶場域周邊地區相輔相成，帶動場域活絡成長。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/04.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '互動設計系-李來春老師團隊作品',
             'intro': `由李來春老師帶領的團隊，設計以磺火季為主題的互動體驗裝置。作為動態形式的展品提供了極受孩童喜愛的體驗。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/05.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '互動設計系-龍祈澔老師團隊作品',
             'intro': `由與龍祈澔老師帶領的團隊，設計以海廢為主題的互動體驗裝置。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/06.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '張若菡老師團隊作品',
             'intro': `與木創團隊合作，呈現Design for SDGs 山林永續相關議題。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/07.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '光寶科技公司團隊作品',
             'intro': `光寶科技致力於海廢保麗龍循環再利用，從中提取PS與溶劑並循環再製為HIPS，實際量產推出海廢鍵盤與滑鼠組合。近期更投入「海廢保麗龍循環處理貨櫃」，將其模組化並投入亞洲各打撈點，期望進一步提高使用效益。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/08.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': 'NGO團體-湛團隊作品-湛鬥機原型展示',
             'intro': `NGO團體-湛團隊作品-湛鬥機原型展示。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/09.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '2019台北設計獎金獎作品-River cleaner',
             'intro': `2019台北設計獎金獎作品-River cleaner`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/10.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '成果推廣數位化/影音化，實現疫情時代下多元管道觸及',
             'intro': `透過主流社群媒體(FB、IG、YT)的定期推廣投放，橫向拓展更加多元的觸及管道。拍攝作品介紹影片與重點事件紀錄，並架設專屬的宣傳介紹網站定期更新，為後疫情時代下的觀展體驗提供智慧且安全便捷的選擇。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/11.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'title': '強化學界與產業鏈結，共創海廢創意課程體驗',
@@ -159,7 +181,9 @@
                     將海廢透過創意思考重新賦予價值，轉化為海廢創意小車，極具互動性。在使用者遊樂的同時教育SDG14的永續發展理念。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/12.jpg',
             'link': 'https://osausr.ntut.edu.tw/p/426-1001-54.php?Lang=zh-tw',
-        }
+            'youtube': '',
+            'otherLink': '',
+        },
     ]
 
     // 心得回饋
