--- a/DB/合作團隊_木創文化攪動深根計畫.html
+++ b/DB/合作團隊_木創文化攪動深根計畫.html
@@ -109,11 +109,15 @@
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/675109942.png',
             'name': '同學 A',
             'content': '心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。',
+            'youtube': '',
+            'otherLink': '',
         },
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png',
             'name': '同學 B',
             'content': '心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。',
+            'youtube': '',
+            'otherLink': '',
         },
     ];
 </script>
