--- a/DB/合作團隊_營造永續貢學環境-文化扎根與創新.html
+++ b/DB/合作團隊_營造永續貢學環境-文化扎根與創新.html
@@ -129,6 +129,8 @@
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/9.png',
             'name': '同學 A',
             'content': '我覺得USR開的課程都能夠讓我們從做中學，不是像一般上課一樣只是聽講而已，這樣的學習方式我認為是非常優質的，能夠讓學生們更印象深刻，也能夠快樂學習。',
-        }
+            'youtube': '',
+            'otherLink': '',
+        },
     ];
 </script>
