--- a/DB/合作團隊_青銀共創．友善療癒綠社區.html
+++ b/DB/合作團隊_青銀共創．友善療癒綠社區.html
@@ -135,7 +135,9 @@
                 `起初參與計畫時，其實很納悶在繁忙的都市裡要怎麼建置療癒綠社區？心中滿滿的疑惑在的繁忙的城裡市怎麼療癒？帶著許多困頓進入社區現況掃描調查，在調查的過程頓時間才發掘到，其實繁忙的忠孝東路、新生南路、建國南路與仁愛路所包圍的社區，是個被繁忙的商辦及快速的車流外衣所為包圍的優美秘境社區，擁有台北市很難得看見的綠廊秘境，甚至擁有許多日式舊宿舍，留下許多歷史脈絡之串聯的線索，走在社區巷弄內發現許多獨立工作室如：烘焙工作室、音樂工作室、拼布工作室、品酒館、花坊等，擁有綠意與藝術創作的巷弄框間，整體社區調查的過程總是充滿驚奇，調查現況拍攝過程，腦中已開始隨的社區豐富資源起舞，想了很多規劃點子，迫不期待想趕緊將設去現況特色作規劃串聯社區療癒路徑。
                 \n現況調查完後，每位組員們憂心社區現況資料不完整，然而討論後決定拜訪里長預想更深入的了解社區問題，從一開始忐忑的與里長聯絡訪談時間，到訪談時間敲定，再到與里長訪談，最後開心順利的與里長進行KJ法的討論，與里長對面的對談過程裡，感受到他對於里民的愛與無怨無會的付出，很感謝里長補充了很多網路所蒐尋不到的資料，替解惑了很多組員們在基地掃描時的疑惑。KJ法的討論完後帶回訪談資料，開始熱絡的小組討論，過程中組員們合作嘗試以製作社區環境模型及建置3D環境建模，討論過程更了解現況環境議題，團隊合作的過程互相學習不同領域的對於社區構想之實踐，是參與計畫過程中可貴的經驗。
                 \n調查過程同時，與里長及居民訪談中也了解到社區期望透過學生的創意及讓高齡者走出家門參與社區活動，社區期望社區閒置空間未來能規畫為提供社區場域作為展示與舉辦活動之空間，很讓人感動的是居民樂於分享自己的生活經驗，和積極的提出自己社區優勢及待改善的要點，在訪談的過程熱絡回應我們的對於社區的總總疑惑，讓我們很快融入民輝社區，打破我對於都市人冷漠的既定想法。里民訪談的結果與過程中的學習早已轉換為協助社區發展的基礎能量。參與調查與訪談過程中，我發現到社區服務要有心意、要有誠意，先透過學習累積自己的人文知識及服務能量。
-                \n雖然付出與回收不成正比，能盡自己一份微薄的力量協助社區發展，想辦法攪動社區參與並不是口號般的單純，過程中靠的是大量時間不斷的接觸認識，並且在磨合中「搏感情」。總結這一學期來的大學生實踐計畫之經驗，「計畫不難，難的是實踐；實踐不難，難的是永續」，星星之火，可以燎原，期待這場實踐計畫「友善療癒綠社區」能夠埋下發芽的種子並成長茁壯，讓學校和社區互為擁抱。`
-        }
+                \n雖然付出與回收不成正比，能盡自己一份微薄的力量協助社區發展，想辦法攪動社區參與並不是口號般的單純，過程中靠的是大量時間不斷的接觸認識，並且在磨合中「搏感情」。總結這一學期來的大學生實踐計畫之經驗，「計畫不難，難的是實踐；實踐不難，難的是永續」，星星之火，可以燎原，期待這場實踐計畫「友善療癒綠社區」能夠埋下發芽的種子並成長茁壯，讓學校和社區互為擁抱。`,
+            'youtube': '',
+            'otherLink': '',
+        },
     ];
 </script>
