--- a/Desktop/合作團隊/亮點成果.html
+++ b/Desktop/合作團隊/亮點成果.html
@@ -1,5 +1,5 @@
 <div class="collaborative-partner-highlight-container">
-    <h1 class="w-100 text-center collaborative-partner-highlight-title">亮點成果</h1>
+    <h1 class="w-100 text-center collaborative-partner-highlight-title">亮 點 成 果</h1>
 
     <div id="collaborativePartnerHighlightContentsContainer" class="w-100">
         <div id="collaborativePartnerHighlightContentsWrapper" class="d-flex flex-column bd-highlight pl-3 mb-3"></div>
@@ -13,9 +13,10 @@
 
     .collaborative-partner-highlight-title {
         margin: 149px 0 60px 0 !important;
-        color: #4998b2;
+        color: #4998b2 !important;
         font-size: 45px !important;
         line-height: 1.33 !important;
+        letter-spacing: 2.25px !important;
     }
 
     .collaborativePartnerHighlightContentsContainer {
