--- a/Desktop/合作團隊/合作團隊成員.html
+++ b/Desktop/合作團隊/合作團隊成員.html
@@ -13,12 +13,10 @@
 
     .collaborative-partner-member-title {
         padding: 92px 0 98px !important;
-        ;
-        color: #4998b2;
+        color: #4998b2 !important;
         font-size: 45px !important;
-        ;
         line-height: 1.33 !important;
-        ;
+        letter-spacing: 2.25px !important;
     }
 
     #collaborativePartnerMemberContentContainer {
