--- a/Desktop/關於我們/組織架構.html
+++ b/Desktop/關於我們/組織架構.html
@@ -6,7 +6,7 @@
                 <table id="menberTable" class="table table-borderless">
                     <tbody>
                         <tr>
-                            <th scope="row" nowrap="nowrap">副主任:</th>
+                            <th scope="row" nowrap="nowrap">主任:</th>
                             <td nowrap="nowrap">王錫福 校長</td>
                         </tr>
                         <tr>
@@ -56,7 +56,7 @@
     }
 
     #organizationTitle {
-        padding-top: 540px;
+        padding-top: 150px;
         font-size: 45px;
         line-height: 1.33;
         color: #4998b2;
