--- a/Desktop/頁尾_一般頁面用.html
+++ b/Desktop/頁尾_一般頁面用.html
@@ -30,16 +30,16 @@
                             <span class="px-2"> | </span>
                             <a class="text-decoration-none text-white" href="https://osausr.ntut.edu.tw/">社會責任實踐計畫</a>
                         </p>
-                        <p class="footer-sub-title m-0">National Taipei University of Technology<span class="px-2"> |
-                            </span>Unversity
-                            Social Responsibility(USR)</p>
+                        <p class="footer-sub-title pt-2 m-0">National Taipei University of Technology<span class="px-2">
+                                |
+                            </span>University Social Responsibility(USR)</p>
                     </div>
                 </div>
             </div>
-            <div class="d-none d-xl-block col-xl-3"></div>
-            <div class="col-12 col-lg-4 col-xl-3 d-none d-lg-block">
+            <div class="d-none d-xl-block col-xl-2"></div>
+            <div class="col-12 col-lg-4 col-xl-4 d-none d-lg-block">
                 <div class="d-flex flex-column text-right">
-                    <p class="footer-address m-0">106 臺北市大安區忠孝東路三段1號</p><br>
+                    <p class="footer-address m-0">106 臺北市大安區忠孝東路三段1號 行政大樓十樓 USR 辦公室</p><br>
                     <p class="footer-address m-0">TEL : (02)27771-2171 #1220、#1221</p>
                 </div>
             </div>
@@ -48,6 +48,14 @@
 </div>
 
 <style>
+    .meditor {
+        width: 100%;
+    }
+
+    .footer {
+        margin: 0;
+    }
+
     #footerLogo {
         margin-right: 40px;
         width: 90px;
