--- a/Desktop/頁尾_首頁.html
+++ b/Desktop/頁尾_首頁.html
@@ -9,17 +9,18 @@
                 <p class="footer-title">
                     <a class="text-decoration-none text-white" href="https://www.ntut.edu.tw/" target="_blank"
                         rel="noreferrer noopenner">國立臺北科技大學</a><span class="px-2"> | </span>
-                    <a class="text-decoration-none text-white" href="https://osausr.ntut.edu.tw/">社會責任實踐計畫</a></p>
+                    <a class="text-decoration-none text-white" href="https://osausr.ntut.edu.tw/">大學社會責任實踐計畫</a>
+                </p>
             </div>
             <div>
                 <p class="footer-sub-title">National Taipei University of Technology<span class="px-2"> |
-                    </span>Unversity Social Responsibility(USR)</p>
+                    </span>University Social Responsibility(USR)</p>
             </div>
             <div class="mt-5">
-                <p class="footer-address">106 臺北市大安區忠孝東路三段1號</p>
+                <p class="footer-address">106 臺北市大安區忠孝東路三段1號 行政大樓十樓 USR 辦公室</p>
             </div>
             <div>
-                <p class="footer-address">TEL : (02)27771-2171 #1220、#1221</p>
+                <p class="footer-address">TEL : (02) 27771-2171 #1220、#1221</p>
             </div>
         </div>
     </div>
@@ -29,8 +30,6 @@
 <!-- 系統頁尾 CSS -->
 <style>
     /* google font  */
-    /* @import url('https://fonts.googleapis.com/css?family=Lato|Noto+Sans+TC&display=swap'); */
-
     #Footer-Logo {
         width: 151px;
         position: relative;
