--- a/Desktop/合作團隊/合作團隊主題.html
+++ b/Desktop/合作團隊/合作團隊主題.html
@@ -34,10 +34,12 @@
     #collaborativePartnerBackgroundContentTitle {
         margin-bottom: 45px;
         font-size: 50px;
+        line-height: 1.34 !important;
+        letter-spacing: 3px !important;
     }
 
     #collaborativePartnerBackgroundContentSubTitle {
-        font-size: 30px;
+        font-size: 30px !important;
     }
 
     #collaborativePartnerBackgroundContentHr {
