--- a/Desktop/實踐成果/場域地圖.html
+++ b/Desktop/實踐成果/場域地圖.html
@@ -63,8 +63,10 @@
         font-size: 35px;
         color: #999999;
         left: 10%;
-        top: 20%;
+        top: 21%;
         z-index: 100;
+        letter-spacing: 3.5px;
+        line-height: 1.34;
     }
 
     #activityRegionContentContainer {
