新增 組織成員註解

--- a/DB/關於我們_組織成員.html
+++ b/DB/關於我們_組織成員.html
@@ -1,7 +1,11 @@
 <script>
     /**
       * 使用方式 顯示順序為上至下
-      * 欄位種類: title, avatar, position, tel, email(選填)
+      * title: '姓名', 
+      * avatar: '頭像', 
+      * position: '職位', 
+      * tel: '連絡電話', 
+      * email: 'email'(選填)
     */
     const organizationMembers = [
         {
