修改學生心得彈出視窗點選範圍

--- a/Desktop/合作團隊/心得回饋.html
+++ b/Desktop/合作團隊/心得回饋.html
@@ -101,7 +101,7 @@
             // 設定 心得回饋 內容 & 事件
             $(el).find('.collaborative-partner-feedback-author').text(collaborativePartnerFeedbacks[i].name);
             $(el).find('.collaborative-partner-feedback-content').find('.ellipsis-line-4').text(collaborativePartnerFeedbacks[i].content);
-            $(el).find('.collaborative-partner-feedback-content').click(function () { showFeedbackModal(i) });
+            $(el).click(function () { showFeedbackModal(i) });
             $(el).find('.student-avatar').attr("src", collaborativePartnerFeedbacks[i].avatar);
             // 新增入 UI
             $('#collaborative-partner-feedbacks-container').append(el);
