--- a/Desktop/頁尾_一般頁面用.html
+++ b/Desktop/頁尾_一般頁面用.html
@@ -19,7 +19,7 @@
     </div>
     <div class="d-none d-md-block container-fluid">
         <div class="row align-items-center">
-            <div class="col-12 col-lg-8 col-xl-6">
+            <div class="col-12 col-lg-8">
                 <div class="d-flex flex-row align-items-center">
                     <img class="shake-slow" id="footerLogo"
                         src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/1.png">
@@ -36,11 +36,10 @@
                     </div>
                 </div>
             </div>
-            <div class="d-none d-xl-block col-xl-2"></div>
-            <div class="col-12 col-lg-4 col-xl-4 d-none d-lg-block">
+            <div class="col-12 col-lg-4 d-none d-lg-block">
                 <div class="d-flex flex-column text-right">
                     <p class="footer-address m-0">106 臺北市大安區忠孝東路三段1號 行政大樓十樓 USR 辦公室</p><br>
-                    <p class="footer-address m-0">TEL : (02)27771-2171 #1220、#1221</p>
+                    <p class="footer-address m-0">TEL : (02) 27771-2171 #1220、#1221</p>
                 </div>
             </div>
         </div>
