--- a/Desktop/頁首.html
+++ b/Desktop/頁首.html
@@ -162,6 +162,7 @@
         text-align: center;
         white-space: nowrap;
         padding: 0px;
+        cursor: pointer;
     }
 
     .dropdown-item {
@@ -206,7 +207,7 @@
 
                     <p class="header-sub-title text-white mb-0 d-none d-md-block">National Taipei University of
                         Technology<span class="px-2"> |
-                        </span>Unversity Social Responsibility(USR)</p>
+                        </span>University Social Responsibility(USR)</p>
                 </div>
 
                 <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
@@ -214,7 +215,8 @@
                     type="button"><span class="navbar-toggler-icon"></span></button>
 
 
-                <div class="collapse navbar-collapse navbar-collapse-center justify-content-end" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse navbar-collapse-center justify-content-end" id="navbarNavDropdown"
+                    style="max-width: 60%;">
                     <ul class="navbar-nav navbar-center pt-5 pt-xl-0" id="officeIntroList">
                         <li class="nav-item dropdown">
                             <a class="nav-link text-white dropdown-toggle" data-toggle="dropdown" role="button"
@@ -235,7 +237,8 @@
                         </li>
                         <li class="nav-item dropdown ">
                             <a class="nav-link text-white"
-                                href="https://osausr.ntut.edu.tw/p/403-1001-11-1.php?Lang=zh-tw">最新公告</a></li>
+                                href="https://osausr.ntut.edu.tw/p/403-1001-11-1.php?Lang=zh-tw">最新公告</a>
+                        </li>
                         <li class="nav-item dropdown "><a class="nav-link text-white dropdown-toggle"
                                 data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">檔案下載</a>
                             <div class="dropdown-menu" id="dropdown-menu">
@@ -255,7 +258,8 @@
                                 <a class="dropdown-item"
                                     href="https://osausr.ntut.edu.tw/p/426-1001-29.php?Lang=zh-tw#Section_Activity_Region">場域地圖</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">培力課程</a>
+                                <a class="dropdown-item"
+                                    href="https://osausr.ntut.edu.tw/p/426-1001-42.php?Lang=zh-tw">培力課程</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown "><a class="nav-link text-white"
