--- a/Desktop/合作團隊/合作團隊複製用模板.html
+++ b/Desktop/合作團隊/合作團隊複製用模板.html
@@ -2,7 +2,7 @@
 <div id="template" class="d-none">
     <!-- 團隊成員 -->
     <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-        <div class="d-flex flex-column align-items-center" data-aos="flip-left" style="cursor: pointer;">
+        <div class="d-flex flex-column align-items-center" data-aos="flip-left">
             <img class="member-avatar" alt="成員照片" width="174" height="174">
             <p class="collaborative-partner-member-content-name"></p>
             <p class="collaborative-partner-member-content-department"></p>
@@ -16,8 +16,8 @@
     <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left" data-aos-duration="1000">
         <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image">
         </div>
-        <div class="col-12 col-lg-7 mt-5 mt-lg-0">
-            <div class="d-flex flex-column bd-highlight pl-3 mb-3">
+        <div class="col-12 col-lg-7 mt-5 mt-lg-0 p-0">
+            <div class="d-flex flex-column bd-highlight pl-5 mb-3">
                 <div class="collaborative-partner-highlight-content-title"></div>
 
                 <div class="collaborative-partner-highlight-content">
