--- a/Desktop/關於我們/LOGO區.html
+++ b/Desktop/關於我們/LOGO區.html
@@ -29,9 +29,9 @@
 </section>
 <style type="text/css">
     #logo-container {
-        margin-top: 350px;
         height: 735px;
-        background-image: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/610905850.png)
+        background-image: url('https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/576750704.jpg');
+        background-size: cover;
     }
 
     #logo-wrapper-phone {
