--- a/Desktop/關於我們/組織成員.html
+++ b/Desktop/關於我們/組織成員.html
@@ -1,18 +1,19 @@
 <section id="Section_Organization_Member">
-    <div class="float-on-bg bg-white organization-member-container">
-        <p class="float-on-bg bg-white organization-member-title w-100 text-center">組 織 成 員</p>
+    <div id="organizationMemberContainer" class="float-on-bg bg-white">
+        <h1 id="organizationMemberTitle" class="float-on-bg bg-white w-100 text-center m-0">組 織 成 員</h1>
 
         <div id="Div_Organization_Members_Wrapper"></div>
     </div>
 </section>
 
 <style type="text/css">
-    .organization-member-title {
+    #organizationMemberContainer {
+        padding-bottom: 350px;
+    }
+
+    #organizationMemberTitle {
         padding: 180px 0 46px;
-        font-size: 45px;
-        font-weight: normal;
-        font-stretch: normal;
-        font-style: normal;
+        font-size: 45px !important;
         line-height: 1.33;
         letter-spacing: normal;
         color: #4998b2;
