--- a/Desktop/合作團隊/亮點成果.html
+++ b/Desktop/合作團隊/亮點成果.html
@@ -46,6 +46,7 @@
     }
 
     .collaborative-partner-highlight-content-title {
+        margin-top: 17px;
         font-size: 35px !important;
         line-height: 1.34 !important;
         letter-spacing: 4.2px !important;
@@ -59,6 +60,10 @@
         letter-spacing: 3px;
         color: #707070;
         white-space: pre-line;
+    }
+
+    .collaborative-partner-highlight-content-button-link {
+        width: fit-content;
     }
 
     .collaborative-partner-highlight-content-button {
@@ -76,6 +81,8 @@
     .collaborative-partner-highlight-content-button:hover {
         background: #4998b2;
         color: #fff;
+        border: 0px;
+        transition-timing-function: ease-out;
     }
 
     .collaborative-partner-highlight-content-image {
@@ -86,7 +93,7 @@
 
     @media (min-width: 767px) {
         .collaborative-partner-highlight-content-image {
-            min-height: 500px;
+            min-height: 400px;
         }
     }
 </style>
